recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:27: error: expected start of definition
	override def run() {
                 ^PentaKoch:30: error: Unmatched closing brace '}' ignored here
}
^